solved checkout-itemslayout bug

--- a/index.css
+++ b/index.css
@@ -79,13 +79,18 @@ p{
 
 
 .checkout-items{
-    display: flex;
+
 
     border-bottom: 2px solid #393333;
     width:calc(100% - 40px);
     margin-left: 20px;
     margin-right: 20px;
     box-sizing: border-box;
+}
+
+.checkout-items p{
+    display: flex;
+    justify-content: space-between;
 }
 .total
 .btn{
